--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -17,17 +17,21 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'read' %}">Home</a>
+                    <a class="nav-link" href="#">Sobre</a>
                 </li>
                 <li class="nav-item">
-                    <form method="post" action="{% url 'logout' %}" >
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-primary">Sair</button>
-                    </form>
+                    <a class="nav-link" href="#">Contato</a>
                 </li>
-                
             </ul>
         </div>
+            {% if user.is_authenticated %}
+            <form method="post" action="{% url 'logout' %}" >
+                {% csrf_token %}
+                <button type="submit" class="btn btn-danger">Sair</button>
+            </form>
+            {% else %}
+            <button type="submit" class="btn btn-primary mx-2" onclick="location.href='{% url 'login' %}'">Entrar</button>
+            {% endif %} 
     </nav>
 
     
