--- a/accounts/templates/registration/home.html
+++ b/accounts/templates/registration/home.html
@@ -10,9 +10,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="text-primary mb-4">Bem vindo!</h1>
-    <a href="{% url 'signup' %}" class="btn btn-primary">Cadastre-se</a>
-    <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
+    <div class="text-center">
+        <h1 class="text-primary mb-4">Bem vindo!</h1>
+        <a href="{% url 'signup' %}" class="btn btn-primary">Cadastre-se</a>
+        <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
+    </div>
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
