--- a/accounts/templates/registration/read.html
+++ b/accounts/templates/registration/read.html
@@ -1,15 +1,22 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% extends 'base.html' %}
-    {% block title %}<title>Document</title>{% endblock %}
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-</head>
+{% extends 'base.html' %}
+
+{% block title %}<title>Document</title>{% endblock %}
+
 {% block content %}
 <body class="bg-light">
+
+        {% if messages %}
+        <div>
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            {% endfor %}
+        </div>
+        {% endif %}
 
     <div class="container mt-5">
         <h2 class="text-primary">Animais</h2>
