--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -34,6 +34,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contato</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'api' %}">Info raças de cães</a>
+                </li>
             </ul>
         </div>
             {% if user.is_authenticated %}
