update models perfil e medicamento

--- a/perfil/templates/perfil.html
+++ b/perfil/templates/perfil.html
@@ -29,6 +29,7 @@
         <div class="perfil-info mt-3"> 
             <p><strong>Data Criação:</strong> {{perfil.user.date_joined|date:'d/m/Y'}}</p>
             <p><strong>Ocupação:</strong> {{perfil.ocupacao}}</p>
+            <p><strong>CRMV:</strong> {{perfil.crmv}}</p>
             <p><strong>Descrição:</strong> {{perfil.descricao}}</p>
             <p><strong>Telefone:</strong> {{perfil.telefone}}</p>
             <p><strong>Cidade:</strong> {{perfil.cidade}}</p>
