--- a/accounts/templates/registration/read.html
+++ b/accounts/templates/registration/read.html
@@ -41,7 +41,7 @@
         <a href="{% url 'cadastro_procedimento' %}" class="btn btn-primary mb-5">Adicionar Procedimento</a>
 
         <h2 class="text-primary">Relatórios</h2>
-        <form method="GET" action="{% url 'relatorio' %}">
+        <form id="pdfForm">
             <div class="form-group">
                 <label for="animalSelect">Selecione um animal</label>
                 <select class="form-control" id="animalSelect" name="animal_id">
@@ -50,9 +50,17 @@
                     {% endfor %}
                 </select>
             </div>
-            <button type="submit" class="btn btn-primary mt-3">Gerar Relatório</button>
+            <button type="button" onclick="generatePDF()" class="btn btn-primary mt-3">
+                Gerar Relatório PDF
+            </button>
         </form>
-        
+
+        <script>
+        function generatePDF() {
+            const animalId = document.getElementById('animalSelect').value;
+            window.open(`/api/relatorio/pdf/${animalId}/`, '_blank');
+        }
+        </script>
     </div>
 
     
