--- a/perfil/templates/perfil.html
+++ b/perfil/templates/perfil.html
@@ -33,7 +33,7 @@
             <p><strong>Descrição:</strong> {{perfil.descricao}}</p>
             <p><strong>Telefone:</strong> {{perfil.telefone}}</p>
             <p><strong>Cidade:</strong> {{perfil.cidade}}</p>
-            <p><strong>País:</strong> {{perfil.estado}}</p>   
+            <p><strong>Estado:</strong> {{perfil.estado}}</p>   
             
         </div>
     </div> 
