--- a/perfil/templates/perfil.html
+++ b/perfil/templates/perfil.html
@@ -27,6 +27,7 @@
             Editar Perfil
         </button>
         <div class="perfil-info mt-3"> 
+            <h1>{{perfil.user}}</h1>
             <p><strong>Data Criação:</strong> {{perfil.user.date_joined|date:'d/m/Y'}}</p>
             <p><strong>Ocupação:</strong> {{perfil.ocupacao}}</p>
             <p><strong>CRMV:</strong> {{perfil.crmv}}</p>
