adiciona filtro de busca

--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -40,17 +40,30 @@
             </ul>
         </div>
             {% if user.is_authenticated %}
-            <span class="p-2">
-                <button type="submit" class="btn btn-primary mx-2" onclick="location.href='{% url 'perfil'  %}'">Perfil</button>
-                
-            </span>
-            <form method="post" action="{% url 'logout' %}" >
-                {% csrf_token %}
-                <button type="submit" class="btn btn-danger">Sair</button>
-            </form>
-            {% else %}
-            <button type="submit" class="btn btn-primary mx-2" onclick="location.href='{% url 'login' %}'">Entrar</button>
-            {% endif %} 
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <form method="get" action="" class="d-flex">  
+                        <input type="search" name="nome" class="form-control me-2" placeholder="Buscar por nome" aria-label="Search" value="{{ request.GET.nome }}">
+                        <button class="btn btn-success" type="submit">Pesquisar</button>
+                    </form>
+                </li>
+                <li class="nav-item">
+                    <span class="p-2">
+                        <button type="submit" class="btn btn-primary mx-2" onclick="location.href='{% url 'perfil' %}'">Perfil</button>
+                    </span>
+                </li>
+                <li class="nav-item">
+                    <form method="post" action="{% url 'logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-danger">Sair</button>
+                    </form>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <button type="submit" class="btn btn-primary mx-2" onclick="location.href='{% url 'login' %}'">Entrar</button>
+                </li>
+                {% endif %}
+            </ul>
     </nav>
 
     
